#   /$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$$ /$$$$$$  /$$$$$$
#  /$$__  $$ /$$__  $$| $$$ | $$| $$_____/|_  $$_/ /$$__  $$
# | $$  \__/| $$  \ $$| $$$$| $$| $$        | $$  | $$  \__/
# | $$      | $$  | $$| $$ $$ $$| $$$$$     | $$  | $$ /$$$$
# | $$      | $$  | $$| $$  $$$$| $$__/     | $$  | $$|_  $$
# | $$    $$| $$  | $$| $$\  $$$| $$        | $$  | $$  \ $$
# |  $$$$$$/|  $$$$$$/| $$ \  $$| $$       /$$$$$$|  $$$$$$/
#  \______/  \______/ |__/  \__/|__/      |______/ \______/
cmake_minimum_required(VERSION 3.22)
project(project VERSION 0.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#   /$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$   /$$$$$$  /$$$$$$$$  /$$$$$$
#  /$$__  $$ /$$__  $$| $$  | $$| $$__  $$ /$$__  $$| $$_____/ /$$__  $$
# | $$  \__/| $$  \ $$| $$  | $$| $$  \ $$| $$  \__/| $$      | $$  \__/
# |  $$$$$$ | $$  | $$| $$  | $$| $$$$$$$/| $$      | $$$$$   |  $$$$$$
#  \____  $$| $$  | $$| $$  | $$| $$__  $$| $$      | $$__/    \____  $$
#  /$$  \ $$| $$  | $$| $$  | $$| $$  \ $$| $$    $$| $$       /$$  \ $$
# |  $$$$$$/|  $$$$$$/|  $$$$$$/| $$  | $$|  $$$$$$/| $$$$$$$$|  $$$$$$/
#  \______/  \______/  \______/ |__/  |__/ \______/ |________/ \______/
file(GLOB_RECURSE SOURCES "src/*.cpp")

#  /$$$$$$$$ /$$$$$$$$  /$$$$$$  /$$$$$$$$ /$$$$$$ /$$   /$$  /$$$$$$
# |__  $$__/| $$_____/ /$$__  $$|__  $$__/|_  $$_/| $$$ | $$ /$$__  $$
#    | $$   | $$      | $$  \__/   | $$     | $$  | $$$$| $$| $$  \__/
#    | $$   | $$$$$   |  $$$$$$    | $$     | $$  | $$ $$ $$| $$ /$$$$
#    | $$   | $$__/    \____  $$   | $$     | $$  | $$  $$$$| $$|_  $$
#    | $$   | $$       /$$  \ $$   | $$     | $$  | $$\  $$$| $$  \ $$
#    | $$   | $$$$$$$$|  $$$$$$/   | $$    /$$$$$$| $$ \  $$|  $$$$$$/
#    |__/   |________/ \______/    |__/   |______/|__/  \__/ \______/

include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/df1544bcee0c7ce35cd5ea0b3eb8cc81855a4140.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

FILE(GLOB_RECURSE TEST_SOURCES "test/*.cpp")

add_executable(
    run_tests
    ${TEST_SOURCES}
)

target_link_libraries(
    run_tests
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(run_tests)

#  /$$       /$$$$$$ /$$$$$$$   /$$$$$$
# | $$      |_  $$_/| $$__  $$ /$$__  $$
# | $$        | $$  | $$  \ $$| $$  \__/
# | $$        | $$  | $$$$$$$ |  $$$$$$
# | $$        | $$  | $$__  $$ \____  $$
# | $$        | $$  | $$  \ $$ /$$  \ $$
# | $$$$$$$$ /$$$$$$| $$$$$$$/|  $$$$$$/
# |________/|______/|_______/  \______/


#  /$$$$$$$$ /$$$$$$  /$$$$$$$   /$$$$$$  /$$$$$$$$ /$$$$$$$$
# |__  $$__//$$__  $$| $$__  $$ /$$__  $$| $$_____/|__  $$__/
#    | $$  | $$  \ $$| $$  \ $$| $$  \__/| $$         | $$
#    | $$  | $$$$$$$$| $$$$$$$/| $$ /$$$$| $$$$$      | $$
#    | $$  | $$__  $$| $$__  $$| $$|_  $$| $$__/      | $$
#    | $$  | $$  | $$| $$  \ $$| $$  \ $$| $$         | $$
#    | $$  | $$  | $$| $$  | $$|  $$$$$$/| $$$$$$$$   | $$
#    |__/  |__/  |__/|__/  |__/ \______/ |________/   |__/
add_executable(out ${SOURCES})
